<resources>
    <string name="app_name">FeedHive</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="channel_name">Channel name</string>
    <string name="database">Database</string>
    <string name="about_app">About</string>
    <string name="about_app_email">Email : yhcting77@gmail.com</string>
    <string name="about_app_blog">Blog : http://yhcting.tistory.com</string>
    <string name="about_app_page">User manual : http://yhcting.tistory.com/287</string>
    <string name="license">License</string>
    <string name="version">Version</string>
    <string name="category">Category</string>
    <string name="plz_wait">Please wait a moment</string>
    <string name="infinite">infinite</string>
    <string name="delete">Delete</string>
    <string name="deleting">Deleting</string>
    <string name="loading">Loading</string>
    <string name="menu_more">Menu more</string>
    <string name="all">All</string>
    <string name="favorite_items">Favorite items</string>
    <string name="all_items">All items</string>
    <string name="send_err_report">Send error report</string>
    <string name="send_usage_report">Send usage report</string>
    <string name="send_feedback_report">Send feedback report</string>
    <string name="update_all_channels">Update all channels</string>
    <string name="update_category_channels">Update category channels</string>
    <string name="enter_name">Enter name</string>
    <string name="channel_url">Channel URL</string>
    <string name="setting">Setting</string>
    <string name="oclock">o\'clock</string>
    <string name="enter_channel_address">Enter channel URL</string>
    <string name="youtube_channel">Youtube channel</string>
    <string name="uploader">Uploader</string>
    <string name="word_search">Keyword</string>
    <string name="send_opinion">E-mail opinion</string>
    <string name="db_management">DB Management</string>
    <string name="feed_search">Feed search</string>
    <string name="db_size">Total DB size</string>
    <string name="exportdb">Export DB</string>
    <string name="exporting">Exporting</string>
    <string name="importdb">Import DB</string>
    <string name="importing">Importing</string>
    <string name="shrinkdb">Shrink DB</string>
    <string name="nr_all_items">All feeds</string>
    <string name="nr_deleted_items_noti">feeds are deleted.</string>
    <string name="analyzing_db">analyzing DB</string>
    <string name="nr_items">Feeds</string>
    <string name="per_chann_mgmt">Manage each channel</string>
    <string name="feedshrink_all">Delete all</string>
    <string name="feedshrink_half">Delete half</string>
    <string name="feedshrink_30">Delete 30%</string>
    <string name="empty_list_help">Adding my first channel.</string>
    <string name="empty_list_add_channel_desc">Enter channel URL or selecting from recommended channel by touching this icon.</string>
    <string name="empty_list_btn_desc">About other buttons</string>
    <string name="empty_list_items_favorite">List favorite items.</string>
    <string name="empty_list_items_category">List all category items.</string>
    <string name="empty_list_items_all">List all items.</string>
    <string name="empty_list_category">To do jobs related with category - add/delete/rename.</string>
    <string name="empty_list_more_menu">More menus to manage application.</string>
    <string name="empty_list_setting">Adjust application setting.</string>
    <string name="wait_cancel">Please wait for canceling</string>
    <string name="load_progress">Loading in progress. It may takes long time (up to several minutes?) based on size of feeds of given site.</string>
    <string name="pick_icon_progress">Loading image in progress. It may takes long time based on size of selected image.</string>
    <string name="append">Append</string>
    <string name="cancel">Cancel</string>
    <string name="noti_newitem_title">New feeds</string>
    <string name="noti_newitem_desc">There are new feeds.</string>
    <string name="noti_action_title">Processing</string>
    <string name="noti_action_desc">App. is busy now.</string>
    <string name="err_interrupted">Operation is interrupted or cancelled.</string>
    <string name="err_version_mismatch">Version mismatch.</string>
    <string name="err_url">Invalid URL.</string>
    <string name="err_ionet">Fail to access resource through network.</string>
    <string name="err_iofile">Fail to operate on file.</string>
    <string name="err_get_media">Fail to get media content.</string>
    <string name="err_codec_decode">Fail to decode media.</string>
    <string name="err_parse_unsupported_format">Fail to parse. Unsupported format.</string>
    <string name="err_parse_unsupported_version">Fail to parse. Unsupported version.</string>
    <string name="err_duplicated_channel">It is duplicated one. The channel already registered.</string>
    <string name="err_dbunknown">Unknown DB error. Something wicked issued on DB.</string>
    <string name="err_dbcrash">Database is crashed. All application data SHOULD be cleaned by using application manager.</string>
    <string name="err_unknwon">Unknown error! Something wicked issued on application.</string>
    <string name="err_user_cancelled">Operation is cancelled by user.</string>
    <string name="del_dnfiles_not_allowed_msg">Deleting files is not allowed. There may be files under downloading.</string>
    <string name="delete_downloadded_file">Delete downloadded files</string>
    <string name="delete_used_downloadded_file">Delete used downloadded files</string>
    <string name="delete_item_downloadded_file_msg">Download file of this item is deleted.</string>
    <string name="delete_channel_downloadded_file_msg">All download files of this channel are deleted.</string>
    <string name="delete_channel_used_downloadded_file_msg">Delete already-used downloadded files of this channel</string>
    <string name="delete_all_downloadded_file">Delete all downloadded files</string>
    <string name="delete_all_used_downloadded_file">Delete all used downloadded files</string>
    <string name="delete_all_used_downloadded_file_msg">All already-used downloadded files will be deleted.</string>
    <string name="delete_all_downloadded_file_msg">All downloadded files will be deleted.</string>
    <string name="delete_downloadded_files_errmsg">Some files are not able to be deleted.</string>
    <string name="update_all_channels_msg">All channels are updated immediately.</string>
    <string name="update_category_channels_msg">Channels in this category are updated immediately.</string>
    <string name="add_category">Add category</string>
    <string name="delete_category">Delete category</string>
    <string name="rename_category">Rename category</string>
    <string name="delete_channel">Delete channel</string>
    <string name="delete_item">Delete item</string>
    <string name="mark_as_unopened">Mark as unopened</string>
    <string name="wait_cancel_msg">Waiting for canceling.</string>
    <string name="delete_channel_msg">Are you sure to delete this channel?</string>
    <string name="delete_category_msg">Are you sure to delete this category? All channels in this category are move to default category.</string>
    <string name="deleting_channel_msg">Deleting channel and feeds is under progress.</string>
    <string name="channel_deleted_msg">items are deleted too.</string>
    <string name="delete_item_msg">Are you sure deleting this item?</string>
    <string name="warn_network_unavailable">Network is not available.</string>
    <string name="warn_select_category_to_add">There is no selected category to add into. Please select category first.</string>
    <string name="warn_duplicated_category">Duplicated category name is not allowed.</string>
    <string name="warn_delete_default_category">Deleting default category is not allowed!</string>
    <string name="warn_add_category">Fail to add category!</string>
    <string name="warn_find_app_to_open">Fail to find application to open file.</string>
    <string name="warn_find_gallery_app">Fail to find media gallery application to select image.</string>
    <string name="warn_find_email_app">Fail to find email application.</string>
    <string name="warn_no_item_before_now">There is no item that is stored before now.</string>
    <string name="warn_file_access_denied">Cannot access to given file.</string>
    <string name="warn_exdb_access_denied">Cannot access to exported database file.</string>
    <string name="warn_exdb_not_compatible">Unavailable external database file.</string>
    <string name="warn_db_in_use">Database is in use now. Update or scheduled update may be running. Try again later.</string>
    <string name="warn_db_version_mismatch">Version of imported DB mismatch DB version supported by this application version.</string>
    <string name="warn_too_many_in_category">Too many channels in one category.</string>
    <string name="warn_bad_request">Bad request.</string>
    <string name="default_category_name">Default</string>
    <string name="change_category">Change category</string>
    <string name="select_category">Select category</string>
    <string name="select_predefined_channel">Select predefined</string>
    <string name="pick_icon">Pick icon</string>
    <string name="updatemode_normal">Normal</string>
    <string name="updatemode_download">Download</string>
    <string name="setting_scheduled_update">Scheduled update setting</string>
    <string name="setting_everyday">everyday</string>
    <string name="setting_updatemode">Update Mode</string>
    <string name="setting_browser">Browser setting</string>
    <string name="setting_browser_in">Internal browser</string>
    <string name="setting_browser_ex">External browser</string>
    <string name="pref_tuning">Performance Tuning</string>
    <string name="pref_maxnr_bgtask">Maximum BG Tasks</string>
    <string name="pref_maxnr_bgtask_desc">Maximum number of background tasks that can be run concurrently.</string>
    <string name="pref_bgtask_prio">Priority of background task</string>
    <string name="pref_bgtask_prio_desc">Update or download performance will be increased with higher value, but responsibility will be worse.</string>
    <string name="pref_mem_consumption">Memory consumption</string>
    <string name="pref_mem_consumption_desc">Set to \'high\' for faster but high memory usage.</string>
    <string name="pref_feedback">Feedback</string>
    <string name="pref_send_err_report">Sending error report</string>
    <string name="pref_send_err_report_desc">Error report is sent when application is crashed.</string>
    <string name="pref_send_usage_report">Sending usage report</string>
    <string name="pref_send_usage_report_desc">Sends usage information to improve application (ex. channel urls those are not included at predefined channel.)</string>
    <string name="pref_storage">Storage</string>
    <string name="pref_download_root">Application directory.</string>
    <string name="pref_download_root_desc">Root directory where downloadded files are stored.</string>
    <string name="pref_usage">Usage</string>
    <string name="pref_newmsg_noti">New feed notification</string>
    <string name="pref_newmsg_noti_desc">Notifying new feed to status bar.</string>
    <string name="pref_use_wifi_only">Use Wifi update/download</string>
    <string name="pref_use_wifi_only_desc">Update or download are started only when Wifi is available.</string>
    <string name="pref_appwidget_btn_layout">Button position in appwidget</string>
    <string name="pref_appwidget_btn_layout_desc">Decides position(align) of buttons in app widget. (Ex. \'right\' is better for left-hand user)</string>
</resources>