<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <ListView
        android:id="@+id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        />
    <ScrollView
        android:id="@+id/empty_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:paddingLeft="5dip"
	        android:paddingRight="5dip"
	        android:orientation="vertical"
	        >
	        <TextView
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10dip"
	            android:textSize="@dimen/menu_text_size"
	            android:textColor="@color/text_color_new"
	            android:gravity="center"
	            android:text="@string/empty_list_help"
	            />
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="15dip"
	            android:orientation="horizontal"
	            >
	            <ImageView
	                android:layout_width="@dimen/chlist_bottom_btn_width"
	                android:layout_height="@dimen/chlist_bottom_btn_height"
	                android:gravity="center"
	                android:scaleType="fitCenter"
	                android:src="@drawable/add_channel"
	                />
	            <TextView
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:textSize="@dimen/title_text_size"
	                android:textColor="@color/text_color_new"
	                android:text="@string/empty_list_add_channel_desc"
	                />
	        </LinearLayout>
	        <TextView
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="20dip"
	            android:textSize="@dimen/menu_text_size"
	            android:textColor="@color/text_color_new"
	            android:gravity="center"
	            android:text="@string/empty_list_btn_desc"
	            />
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10dip"
	            android:orientation="horizontal"
	            >
	            <ImageView
	                android:layout_width="@dimen/chlist_bottom_btn_width"
	                android:layout_height="@dimen/chlist_bottom_btn_height"
	                android:gravity="center"
	                android:scaleType="fitCenter"
	                android:src="@drawable/items_favorite"
	                />
	            <TextView
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:textSize="@dimen/title_text_size"
	                android:textColor="@color/text_color_new"
	                android:text="@string/empty_list_items_favorite"
	                />
	        </LinearLayout>
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10dip"
	            android:orientation="horizontal"
	            >
	            <ImageView
	                android:layout_width="@dimen/chlist_bottom_btn_width"
	                android:layout_height="@dimen/chlist_bottom_btn_height"
	                android:gravity="center"
	                android:scaleType="fitCenter"
	                android:src="@drawable/items_category"
	                />
	            <TextView
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:textSize="@dimen/title_text_size"
	                android:textColor="@color/text_color_new"
	                android:text="@string/empty_list_items_category"
	                />
	        </LinearLayout>
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10dip"
	            android:orientation="horizontal"
	            >
	            <ImageView
	                android:layout_width="@dimen/chlist_bottom_btn_width"
	                android:layout_height="@dimen/chlist_bottom_btn_height"
	                android:gravity="center"
	                android:scaleType="fitCenter"
	                android:src="@drawable/items_all"
	                />
	            <TextView
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:textSize="@dimen/title_text_size"
	                android:textColor="@color/text_color_new"
	                android:text="@string/empty_list_items_all"
	                />
	        </LinearLayout>
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10dip"
	            android:orientation="horizontal"
	            >
	            <ImageView
	                android:layout_width="@dimen/chlist_bottom_btn_width"
	                android:layout_height="@dimen/chlist_bottom_btn_height"
	                android:gravity="center"
	                android:scaleType="fitCenter"
	                android:src="@drawable/category"
	                />
	            <TextView
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:textSize="@dimen/title_text_size"
	                android:textColor="@color/text_color_new"
	                android:text="@string/empty_list_category"
	                />
	        </LinearLayout>
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10dip"
	            android:orientation="horizontal"
	            >
	            <ImageView
	                android:layout_width="@dimen/chlist_bottom_btn_width"
	                android:layout_height="@dimen/chlist_bottom_btn_height"
	                android:gravity="center"
	                android:scaleType="fitCenter"
	                android:src="@drawable/management"
	                />
	            <TextView
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:textSize="@dimen/title_text_size"
	                android:textColor="@color/text_color_new"
	                android:text="@string/empty_list_management"
	                />
	        </LinearLayout>
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10dip"
	            android:orientation="horizontal"
	            >
	            <ImageView
	                android:layout_width="@dimen/chlist_bottom_btn_width"
	                android:layout_height="@dimen/chlist_bottom_btn_height"
	                android:gravity="center"
	                android:scaleType="fitCenter"
	                android:src="@drawable/setting"
	                />
	            <TextView
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:textSize="@dimen/title_text_size"
	                android:textColor="@color/text_color_new"
	                android:text="@string/empty_list_setting"
	                />
	        </LinearLayout>
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10dip"
	            android:orientation="horizontal"
	            >
	            <ImageView
	                android:layout_width="@dimen/chlist_bottom_btn_width"
	                android:layout_height="@dimen/chlist_bottom_btn_height"
	                android:gravity="center"
	                android:scaleType="fitCenter"
	                android:src="@drawable/information"
	                />
	            <TextView
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:textSize="@dimen/title_text_size"
	                android:textColor="@color/text_color_new"
	                android:text="@string/empty_list_information"
	                />
	        </LinearLayout>
	    </LinearLayout>
	</ScrollView>
</LinearLayout>